force-app/main/default/objects/AS_Transaction__c/AS_Transaction__c.object-meta.xml
<CustomObject>
    <description>This is the intermediate object that will hold the entries for Accounting Seed.</description>
    <label>AS_Transaction</label>
    <nameField>
        <displayFormat>AST-{0000000}</displayFormat>
        <label>AS_Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AS_Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>