force-app/main/default/objects/AS_Transaction__c/fields/Claim_Id__c.field-meta.xml
<CustomField>
    <fullName>Claim_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field holds the reference for the claim record that the transaction belongs to.</description>
    <label>Claim Id</label>
    <referenceTo>Policy_Claim__c</referenceTo>
    <relationshipLabel>AS_Transactions</relationshipLabel>
    <relationshipName>AS_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>