force-app/main/default/objects/AS_Transaction__c/fields/Dividend_Credit__c.field-meta.xml
<CustomField>
    <fullName>Dividend_Credit__c</fullName>
    <label>Dividend Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>