force-app/main/default/objects/AS_Transaction__c/fields/Firm_Id__c.field-meta.xml
<CustomField>
    <fullName>Firm_Id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field holds the reference to the Firm that transaction belongs to.</description>
    <label>Firm Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AS_Transactions</relationshipLabel>
    <relationshipName>AS_Transactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>