force-app/main/default/objects/AS_Transaction__c/fields/GL_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Name__c</fullName>
    <label>GL Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>