force-app/main/default/objects/AS_Transaction__c/fields/Policy_Claim_Detail__c.field-meta.xml
<CustomField>
    <fullName>Policy_Claim_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Claim Detail</label>
    <referenceTo>Policy_Claim_Detail__c</referenceTo>
    <relationshipLabel>AS_Transactions</relationshipLabel>
    <relationshipName>AS_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>