force-app/main/default/objects/AS_Transaction__c/fields/Policy_Endorsement_Id__c.field-meta.xml
<CustomField>
    <fullName>Policy_Endorsement_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference of the Policy Endorsement that the transaction belongs to.</description>
    <label>Policy Endorsement Id</label>
    <referenceTo>Policy_Endorsement__c</referenceTo>
    <relationshipLabel>AS_Transactions</relationshipLabel>
    <relationshipName>AS_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>