force-app/main/default/objects/AS_Transaction__c/fields/Policy_Id__c.field-meta.xml
<CustomField>
    <fullName>Policy_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference of the Policy that the transactions belongs to.</description>
    <label>Policy Id</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>AS_Transactions</relationshipLabel>
    <relationshipName>AS_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>