force-app/main/default/objects/AS_Transaction__c/fields/Transaction_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Sub_Type__c</fullName>
    <label>Transaction Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Transaction_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Add Lawyer</fullName>
            </value>
            <value>
                <fullName>Cancel Policy</fullName>
            </value>
            <value>
                <fullName>Change Coverage</fullName>
            </value>
            <value>
                <fullName>Change Lawyer</fullName>
            </value>
            <value>
                <fullName>Close Reserve LAE</fullName>
            </value>
            <value>
                <fullName>Close Reserve Loss</fullName>
            </value>
            <value>
                <fullName>Delete Lawyer</fullName>
            </value>
            <value>
                <fullName>ERE</fullName>
            </value>
            <value>
                <fullName>LAE Payment</fullName>
            </value>
            <value>
                <fullName>Loss Payment</fullName>
            </value>
            <value>
                <fullName>Open Reserve LAE</fullName>
            </value>
            <value>
                <fullName>Open Reserve Loss</fullName>
            </value>
            <value>
                <fullName>Reinstate Policy</fullName>
            </value>
            <value>
                <fullName>Re-Open Reserve LAE</fullName>
            </value>
            <value>
                <fullName>Re-Open Reserve Loss</fullName>
            </value>
            <value>
                <fullName>User Reserve LAE</fullName>
                <label>Change Reserve LAE</label>
            </value>
            <value>
                <fullName>User Reserve Loss</fullName>
                <label>Change Reserve Loss</label>
            </value>
            <value>
                <fullName>LAE Deductible</fullName>
            </value>
            <value>
                <fullName>Loss Deductible</fullName>
            </value>
            <value>
                <fullName>Change in Ceded LAE Reserve</fullName>
            </value>
            <value>
                <fullName>Change in Ceded Loss Reserve</fullName>
            </value>
            <value>
                <fullName>Reins. Recoverable-LAE</fullName>
            </value>
            <value>
                <fullName>Reins. Recoverable-Loss</fullName>
            </value>
            <value>
                <fullName>Claim Coverage - ARDC</fullName>
            </value>
            <value>
                <fullName>Issue Policy</fullName>
            </value>
            <value>
                <fullName>Adjust Premium</fullName>
            </value>
            <value>
                <fullName>Unallocated LAE Payment</fullName>
            </value>
            <value>
                <fullName>Deductible Expense New</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>5x5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>