force-app/main/default/objects/AS_Transaction__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>This field is to identify the transaction type, it is the parent field of the transaction sub type field that is used to identify sub types in the claim transactions.</description>
    <label>Transaction Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add Lawyer</fullName>
            </value>
            <value>
                <fullName>Cancel Policy</fullName>
            </value>
            <value>
                <fullName>Change Coverage</fullName>
            </value>
            <value>
                <fullName>Change Lawyer</fullName>
            </value>
            <value>
                <fullName>Close Reserve</fullName>
            </value>
            <value>
                <fullName>Deductible Expense</fullName>
            </value>
            <value>
                <fullName>Delete Lawyer</fullName>
            </value>
            <value>
                <fullName>ERE</fullName>
            </value>
            <value>
                <fullName>LAE Payment</fullName>
            </value>
            <value>
                <fullName>Loss Payment</fullName>
            </value>
            <value>
                <fullName>Open Reserve</fullName>
            </value>
            <value>
                <fullName>Reinstate Policy</fullName>
            </value>
            <value>
                <fullName>Reopen Reserve</fullName>
            </value>
            <value>
                <fullName>User Reserve</fullName>
                <label>Change Reserve</label>
            </value>
            <value>
                <fullName>Deductible Loss</fullName>
            </value>
            <value>
                <fullName>Change in Ceded LAE Reserve</fullName>
            </value>
            <value>
                <fullName>Change in Ceded Loss Reserve</fullName>
            </value>
            <value>
                <fullName>Due from Reins. - LAE</fullName>
            </value>
            <value>
                <fullName>Due from Reins. - Loss</fullName>
            </value>
            <value>
                <fullName>Claim Coverage - ARDC</fullName>
            </value>
            <value>
                <fullName>Issue Policy</fullName>
            </value>
            <value>
                <fullName>Adjust Premium</fullName>
            </value>
            <value>
                <fullName>Unallocated LAE Payment</fullName>
            </value>
            <value>
                <fullName>Deductible Expense New</fullName>
            </value>
            <value>
                <fullName>Cash Payment</fullName>
                <isActive>false</isActive>
                <label>Cash Payment</label>
            </value>
            <value>
                <fullName>Claim Coverage - Memo</fullName>
                <isActive>false</isActive>
                <label>Claim Coverage - Memo</label>
            </value>
            <value>
                <fullName>Claims Coverage</fullName>
                <isActive>false</isActive>
                <label>Claims Coverage</label>
            </value>
            <value>
                <fullName>New Policy</fullName>
                <isActive>false</isActive>
                <label>New Policy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>